# flucoma-torch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest-matrix.yml  python-app.yml
src/flucoma_torch/: __init__.py  config.py  data.py  model.py  optimize_classifier.py  optimize_regressor.py  scaler.py  task.py  train.py  train_classifier.py  train_regressor.py
src/flucoma_torch/config/: __init__.py  model.py  scaler.py
tests/: test_data.py  test_model.py  test_scaler.py
tests/data/: help_mlpr_in.json  help_mlpr_out.json  test_scaler.py
