[project]
name = "flucoma-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catalogue>=2.0.10",
    "hydra-core>=1.3.2",
    "lightning>=2.5.1.post0",
    "loguru>=0.7.3",
    "optuna-integration[pytorch-lightning]>=4.4.0",
    "optuna>=4.4.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[project.scripts]
flucoma-regressor = "flucoma_torch.train_regressor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
